--- a/src/main/resources/templates/components/link.html
+++ b/src/main/resources/templates/components/link.html
@@ -1,1 +1,4 @@
+<link rel="stylesheet" type="text/css" href="./css/colors.css">
+<link rel="stylesheet" type="text/css" href="./css/carta.css">
+
 <link rel="stylesheet" type="text/css" href="./css/login.css">
