--- a/src/main/resources/templates/components/link.html
+++ b/src/main/resources/templates/components/link.html
@@ -2,3 +2,4 @@
 <link rel="stylesheet" type="text/css" href="./css/carta.css">
 
 <link rel="stylesheet" type="text/css" href="./css/login.css">
+<script src="./js/modalproducto.js"></script>
