--- a/src/main/resources/static/css/carta.css
+++ b/src/main/resources/static/css/carta.css
@@ -128,13 +128,18 @@ body::-webkit-scrollbar {
     display: flex;
     width: 400px;
     border: 1px solid #000;
-    
     height: 250px;
     position: relative; /* Necesario para posicionar el precio dentro de este contenedor */
     border-radius: 20px;
     padding: 10px;
 }
+.producto-modal-trigger{
+    text-decoration: none;
+    display: flex;
+    color: #000;
+}
 .producto-info {
+    display: flex;
     padding: 10px;
     flex: 1; /* Para que ocupe el espacio restante */
 }
@@ -205,48 +210,4 @@ h2 {
     width: 100%;
 }
 
-
-/* Estilos para el modal */
-.modal {
-    display: none; 
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-    background-color: #fff; 
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 40% !important; 
-    overflow-y: auto;
-}
-
-.modal img {
-    max-width: 300px;
-    width: 70%;
-    height: auto;
-    display: block; 
-    margin: 0 auto; 
-}
-
-.close {
-    color: #aaa; 
-    float: right; 
-    font-size: 28px; 
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black; 
-    text-decoration: none; 
-    cursor: pointer;
-}
 
