--- a/src/main/resources/templates/carta.html
+++ b/src/main/resources/templates/carta.html
@@ -44,11 +44,8 @@
                 <!-- Productos en carta.html -->
                 <h4 class="carta-category-title">Bebidas</h4>
                 <div class="productos">
-                    <div th:each="producto : ${bebidas}" class="carta-item">
-                        <!-- Enlace para abrir el modal del producto -->
-                        <a href="#" class="producto-modal-trigger" 
-                           th:attr="data-id=${producto.idProducto}" 
-                           onclick="abrirModalProducto(this)">
+                    <div th:if="${postres != null and postres.size() > 0}" th:each="producto : ${postres}" class="carta-item">
+                        <a th:href="@{'/producto/' + ${producto.idProducto}}" class="producto-modal-trigger">
                             <div class="producto-image-container">
                                 <img th:src="@{/upload/productos/{filename}.jpg(filename=${producto.FotoProducto})}" 
                                      th:alt="'Imagen de ' + ${producto.FotoProducto}" class="producto-image">
@@ -58,28 +55,15 @@
                                 <p th:text="'S/. ' + ${producto.precioUnitario}" class="producto-price"></p>
                             </div>
                         </a>
+                        
                     </div>
-                </div>
-
-                <div class="productos">
-                    <div th:if="${bebidas != null and bebidas.size() > 0}" th:each="producto : ${bebidas}" class="carta-item">
-                        <a th:href="@{'#modalProducto-' + ${producto.idProducto}}" class="producto-modal-trigger">
-                            <div class="producto-image-container">
-                                <img th:src="@{/upload/productos/{filename}.jpg(filename=${producto.FotoProducto})}" 
-                                     th:alt="'Imagen de ' + ${producto.FotoProducto}" class="producto-image">
-                            </div>
-                            <div class="producto-info">
-                                <h5 th:text="${producto.nomProducto}" class="producto-title"></h5>
-                                <p th:text="'S/. ' + ${producto.precioUnitario}" class="producto-price"></p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+                </div>        
+                
                 <!-- Categoría Platillos -->
                 <h4 class="carta-category-title">Platillos</h4>
                 <div class="productos">
-                    <div th:if="${platillos != null and platillos.size() > 0}" th:each="producto : ${platillos}" class="carta-item">
-                        <a th:href="@{'#modalProducto-' + ${producto.idProducto}}" class="producto-modal-trigger">
+                    <div th:if="${postres != null and postres.size() > 0}" th:each="producto : ${postres}" class="carta-item">
+                        <a th:href="@{'/producto/' + ${producto.idProducto}}" class="producto-modal-trigger">
                             <div class="producto-image-container">
                                 <img th:src="@{/upload/productos/{filename}.jpg(filename=${producto.FotoProducto})}" 
                                      th:alt="'Imagen de ' + ${producto.FotoProducto}" class="producto-image">
@@ -89,8 +73,9 @@
                                 <p th:text="'S/. ' + ${producto.precioUnitario}" class="producto-price"></p>
                             </div>
                         </a>
+                        
                     </div>
-                </div>
+                </div>        
                 
                 <!-- Categoría Postres -->
                 <h4 class="carta-category-title">Postres</h4>
@@ -113,29 +98,6 @@
             </div>
         </div>
     </section>
-
-    <div id="modalContainer" style="display:none;" onclick="cerrarModal()"></div>
-
-    
-    <script>
-        function abrirModalProducto(element) {
-            const productoId = element.getAttribute("data-id");
-            const modalContainer = document.getElementById("modalContainer");
-    
-            // Llamada para cargar el contenido de modalproducto.html
-            fetch(`/modalproducto.html?idProducto=${productoId}`)
-                .then(response => response.text())
-                .then(html => {
-                    modalContainer.innerHTML = html;
-                    modalContainer.style.display = "block";
-                });
-        }
-    
-        // Cierra el modal
-        function cerrarModal() {
-            document.getElementById("modalContainer").style.display = "none";
-        }
-    </script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
