--- a/src/main/resources/templates/components/link.html
+++ b/src/main/resources/templates/components/link.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="./css/colors.css">
+<link rel="stylesheet" type="text/css" href="./css/modalproducto.css">
 <link rel="stylesheet" type="text/css" href="./css/carta.css">
 
 <link rel="stylesheet" type="text/css" href="./css/login.css">
