--- a/src/main/resources/templates/modalproducto.html
+++ b/src/main/resources/templates/modalproducto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${producto.nomProducto}">Detalles del Producto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link th:include="components/link"></link>
 </head>
 <body>
     <section class="modal_producto">
