--- a/src/main/resources/templates/components/link.html
+++ b/src/main/resources/templates/components/link.html
@@ -1,6 +1,10 @@
-<link rel="stylesheet" type="text/css" href="./css/colors.css">
-<link rel="stylesheet" type="text/css" href="./css/modalproducto.css">
-<link rel="stylesheet" type="text/css" href="./css/carta.css">
 
+
+<link rel="stylesheet" type="text/css" href="./css/modalproducto.css">
+<link rel="stylesheet" type="text/css" href="./css/colors.css">
+
+<link rel="stylesheet" type="text/css" href="./css/carta.css">
+<link rel="stylesheet" type="text/css" href="./css/menu.css">
 <link rel="stylesheet" type="text/css" href="./css/login.css">
-<script src="./js/modalproducto.js"></script>
+
+
