--- a/src/main/resources/templates/modalproducto.html
+++ b/src/main/resources/templates/modalproducto.html
@@ -95,7 +95,8 @@
             <button id="btn-comprar" class="btn btn-primary mt-3">Comprar</button>
         </div>
     </section>
-
+    
+    <!--Script para manejar la cantidad solicitada del producto-->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const btnDecrementar = document.getElementById('btn-decrementar');
