--- a/src/main/resources/templates/listRol.html
+++ b/src/main/resources/templates/listRol.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Lista de Roles</h1>
-    <a href="formRol.html">Agregar Nuevo Rol</a>
+    <a href="/roles/nuevo">Agregar Nuevo Rol</a>
     <table>
         <thead>
             <tr>
