--- a/src/main/resources/templates/bienvenido.html
+++ b/src/main/resources/templates/bienvenido.html
@@ -12,11 +12,7 @@
     <header th:include="components/nav_panel"></header>
     
     <h1>¡Bienvenido, <span th:text="${cliente.nombre}"></span>!</h1>
-    <p>Tu cuenta ha sido registrada exitosamente.</p>
-
-    <a href="/login">Iniciar sesión</a>
-    <a href="/logout">Cerrar sesión</a> <!-- Cerrar la sesión conectado al login -->
-
+    <p>Realiza tus compras de manera responsable</p>
 
 </body>
 </html>
