--- a/src/main/resources/templates/components/nav_panel.html
+++ b/src/main/resources/templates/components/nav_panel.html
@@ -24,15 +24,30 @@
             </li>
             <li><a href="">Nosotros</a></li>
         </ul>
+
+        
         <div class="user-actions">
             <!-- Muestra el nombre del usuario si está logueado, sino muestra texto por defecto -->
-            <span th:text="${cliente != null ? cliente.usuario : 'Nombre Usuario'}">Cliente</span>
+            <span th:text="${session.usuario != null ? session.usuario : 'Nombre Usuario'}">Cliente</span>
+
             <!-- Enlaces a funciones de usuario -->
-            <a href="#" class="icon" title="Carrito">🛒</a>
-            <a href="#" class="icon" title="Usuario">👤</a>
-            <a href="#" title="Iniciar Sesión">Iniciar Sesión</a>
-            <!-- Botón para cambiar entre modo claro/oscuro -->
-            <button class="dark-mode-toggle" title="Cambiar modo oscuro">🌓</button>
+            <a th:classappend="${activePage == 'carrito'} ? 'bg_hover color_dark'" th:href="@{/carrito_compra}" title="Carrito">
+                🛒
+            </a>
+            
+            <!-- Mostrar configuración y cerrar sesión solo si hay sesión activa -->
+            <div th:if="${session.usuario != null}">
+                <a th:href="@{/configuracion}" title="Configuración">⚙️</a>
+                <a th:href="@{/logout}" title="Cerrar Sesión">Cerrar Sesión</a>
+            </div>
+            
+            <!-- Mostrar iniciar sesión solo si no hay sesión activa -->
+            <div th:unless="${session.usuario != null}">
+                <a href="/login" title="Iniciar Sesión">
+                    Iniciar Sesión
+                </a>
+            </div>
+
         </div>
     </div>
 </nav>
